--- a/projects/ngx-aus-design-system/assets/styles.scss
+++ b/projects/ngx-aus-design-system/assets/styles.scss
@@ -1,5 +1,23 @@
 @use "@angular/material" as mat;
 @include mat.core();
+$aus-component-library-primary: mat.define-palette(mat.$indigo-palette);
+$aus-component-library-accent: mat.define-palette(
+  mat.$pink-palette,
+  A200,
+  A100,
+  A400
+);
+$aus-component-library-warn: mat.define-palette(mat.$red-palette);
+$aus-component-library-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $aus-component-library-primary,
+      accent: $aus-component-library-accent,
+      warn: $aus-component-library-warn,
+    ),
+  )
+);
+@include mat.all-component-themes($aus-component-library-theme);
 
 /* You can add global styles to this file, and also import other style files */
 @import "./libs/swiper/swiper.min";
