--- a/projects/ngx-aus-design-system/src/lib/shared/components/checkbox/checkbox.component.scss
+++ b/projects/ngx-aus-design-system/src/lib/shared/components/checkbox/checkbox.component.scss
@@ -14,46 +14,103 @@
     top: 50%;
     left: 50%;
     z-index: 1;
+    opacity: 0;
     position: absolute;
     pointer-events: none;
     transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    svg path {
+      transition: all 0.25s;
+    }
   }
   &__control {
     margin: 0;
-    width: 24px;
-    height: 24px;
     display: block;
     appearance: none;
-    border-radius: 4px;
+    border-radius: spacing(02);
     transition: all 0.25s;
-    background-color: $c-white;
-    border: 1px solid $c-gray-med;
+    background-color: color(neutral, white);
+    border: 1px solid color(neutral, 03);
+    &:hover,
+    &:active {
+      border-color: color(neutral, black);
+    }
+    &:active {
+      background-color: color(neutral, 01);
+    }
     &:focus-visible {
-      outline: none;
-      border-color: $c-black;
-      box-shadow: 0 0 0 4px rgba($c-black, 0.4);
+      outline: 2px solid color(support, focus);
+      box-shadow: none;
+      border-color: color(neutral, 03);
     }
     &:checked {
-      border-color: $c-black;
-      background-color: $c-black;
-    }
-    &:disabled {
-      background-color: $c-white-lgt;
-      &:checked {
-        background-color: $c-black;
+      border-color: color(neutral, black);
+      background-color: color(neutral, black);
+      & + .checkbox__control-tick {
+        opacity: 1;
       }
-      &:not(:checked) + .checkbox__control-tick {
-        display: none;
+      &:active {
+        & + .checkbox__control-tick svg path {
+          fill: color(neutral, 03);
+        }
       }
     }
   }
   &__label {
     line-height: 1;
-    margin-left: 16px;
+    margin-left: spacing(03);
     transform: translateY(1px);
-    ::ng-deep {
-      .typography {
-        line-height: 24px;
+  }
+  &--error {
+    .checkbox {
+      &__control {
+        outline: 2px solid color(support, error);
+        outline-offset: 2px;
+      }
+    }
+  }
+  &--nested {
+    padding-left: spacing(07);
+  }
+  &--size {
+    &-small {
+      .checkbox {
+        &__control {
+          width: spacing(05);
+          height: spacing(05);
+          &-tick {
+            transform: translate(-50%, -50%) scale(0.6);
+          }
+        }
+      }
+    }
+    &-medium {
+      .checkbox {
+        &__control {
+          width: spacing(06);
+          height: spacing(06);
+        }
+      }
+    }
+  }
+  &--disabled {
+    pointer-events: none;
+    .checkbox {
+      &__control {
+        border-color: color(neutral, 01);
+        background-color: color(neutral, 01);
+        &:checked {
+          & + .checkbox__control-tick svg path {
+            fill: color(neutral, 05);
+          }
+        }
+      }
+      &__label {
+        ::ng-deep .typography {
+          color: color(neutral, 06);
+        }
       }
     }
   }
